--- a/.github/workflows/DevSkim.yml
+++ b/.github/workflows/DevSkim.yml
@@ -74,5 +74,5 @@ jobs:
       with:
         sarif_file: devskim-results.sarif
         
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v1
+    # - name: Perform CodeQL Analysis
+    #  uses: github/codeql-action/analyze@v1
